# rulest

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  the-minesweeper-problem.html  the-minesweeper-problem.md
.architect/: seed.sql
.claude/: settings.json
.github/workflows/: ci.yml
.rfcp-ao/: .gitignore
crates/rulest-cli/: CLAUDE.md  Cargo.toml
crates/rulest-cli/src/: build.rs  check.rs  init.rs  link.rs  main.rs  query.rs  register.rs  rule.rs  scaffold.rs  serve.rs  status.rs  sync.rs  validate.rs
crates/rulest-core/: CLAUDE.md  Cargo.toml
crates/rulest-core/src/: advisory.rs  lib.rs  models.rs  queries.rs  registry.rs
crates/rulest-indexer/: CLAUDE.md  Cargo.toml
crates/rulest-indexer/src/: cargo_meta.rs  extractor.rs  lib.rs  sync.rs  ts_extractor.rs
crates/rulest-mcp/: CLAUDE.md  Cargo.toml
crates/rulest-mcp/src/: lib.rs  server.rs  tools.rs
templates/: CLAUDE.module.md  CLAUDE.root.md  seed.sql  settings.json
tests/: integration_test.rs
tests/fixtures/sample-workspace/: Cargo.toml
tests/fixtures/sample-workspace/crates/domain/src/: prelude.rs  types.rs
tests/fixtures/sample-workspace/crates/infra/: Cargo.toml
tests/fixtures/sample-workspace/crates/infra/src/: repository.rs
tests/fixtures/ts-sample/: greeter.ts
