[workspace]
members = [
    "crates/rulest-core",
    "crates/rulest-indexer",
    "crates/rulest-mcp",
    "crates/rulest-cli",
]
resolver = "2"

[workspace.package]
version = "1.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/etanoir/rulest"
keywords = ["architecture", "mcp", "registry", "vibe-coding", "rust"]
categories = ["development-tools", "command-line-utilities"]

[package]
name = "rulest"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
rulest-core = { path = "crates/rulest-core" }
rulest-indexer = { path = "crates/rulest-indexer" }
rulest-mcp = { path = "crates/rulest-mcp" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
