[package]
name = "rulest-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rulest"
path = "src/main.rs"

[dependencies]
rulest-core = { path = "../rulest-core" }
rulest-indexer = { path = "../rulest-indexer" }
rulest-mcp = { path = "../rulest-mcp" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "rt", "macros"] }
