[package]
name = "rulest-cli"
description = "CLI for rulest architecture registry and MCP oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rulest"
path = "src/main.rs"

[dependencies]
rulest-core = { path = "../rulest-core" }
rulest-indexer = { path = "../rulest-indexer" }
rulest-mcp = { path = "../rulest-mcp" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "rt", "macros"] }
