[package]
name = "rulest-indexer"
description = "syn-based source code indexer for rulest architecture registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rulest-core = { path = "../rulest-core" }
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
cargo_metadata = "0.18"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
