[package]
name = "rulest-indexer"
description = "Source code indexer for rulest architecture registry (Rust + TypeScript)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
typescript = ["swc_ecma_parser", "swc_ecma_ast", "swc_common"]

[dependencies]
rulest-core = { path = "../rulest-core" }
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
cargo_metadata = "0.18"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# TypeScript support (optional)
swc_ecma_parser = { version = "36", optional = true }
swc_ecma_ast = { version = "21", optional = true }
swc_common = { version = "19", optional = true }

[dev-dependencies]
tempfile = "3"
