[package]
name = "rulest-mcp"
description = "MCP JSON-RPC server exposing rulest architecture oracle tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rulest-core = { path = "../rulest-core" }
rulest-indexer = { path = "../rulest-indexer", features = ["typescript"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["io-std", "io-util", "rt", "macros"] }
